--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,12 @@
     </section>
     <section class="highlights">
         <h2>highlights</h2>
+        <ul>
+            <li>Legal Assistant - Central American Resource Center</li>
+            <li>Refugee Representation Non-Legal Intern - Human Rights First</li>
+            <li>LOPC Intern - Esperanza Immigrant Rights Project</li>
+            <li>Legislative / Congressional Intern</li>
+        </ul>
     </section>
     <footer>
 
