--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Andrea Garcia is a graduate of California State University, Long Beach practicing law as an attorney's assistant.
         Andrea's professional focus is in immigration law, with additional knowledge of women and gender studies.">
-    <link rel="stylesheet" href="./stylesheets/style.css">
+    <link rel="stylesheet" href="./public/stylesheets/style.css">
     <title>Andrea Garcia - Attorney Assistant</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
         </nav>
     </header>
     <section class="intro">
-        <img src="./images/profile-image.png" alt="andrea-profile" class="profile-image">
+        <img src="./public/images/profile-image.png" alt="andrea-profile" class="profile-image">
         <div class="intro-text">
             <h1>andrea garcia</h1>
             <h4>legal attorney's assistant</h4>
