--- a/index.html
+++ b/index.html
@@ -6,21 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Andrea Garcia is a graduate of California State University, Long Beach practicing law as an attorney's assistant.
         Andrea's professional focus is in immigration law, with additional knowledge of women and gender studies.">
-    <link rel="stylesheet" href="./public/stylesheets/style.css">
+    <link type="text/css" rel="stylesheet" href="./public/stylesheets/style.css">
     <title>Andrea Garcia - Attorney Assistant</title>
 </head>
 <body>
     <header>
-        <h1>andrea g.</h1>
+        <a href="/" class="logo"><img src="./public/images/andrea-logo-complete.svg" alt="andrea-logo"></a>
         <nav>
             <ul>
                 <li><a href="#">Docs</a></li>
-                <li><a href="#">Contact Me</a></li>
+                <li><a href="./routes/html/about.html">Contact Me</a></li>
             </ul>
+            <div class="social-icon">
+                <a href="/"><img src="https://img.icons8.com/bubbles/50/000000/linkedin.png" /></a>
+                <a href="https://icons8.com/icon/108812/linkedin" class="icon-credit">LinkedIn icon by Icons8</a>
+            </div>
         </nav>
     </header>
     <section class="intro">
-        <img src="./public/images/profile-image.png" alt="andrea-profile" class="profile-image">
+        <img src="./public/images/intro-illustration.svg" alt="andrea-profile" class="intro-image">
         <div class="intro-text">
             <h1>andrea garcia</h1>
             <h4>legal attorney's assistant</h4>
