--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
 </head>
 <body>
     <header>
-        <a href="/" class="logo"><img src="./public/images/andrea-logo-complete.svg" alt="andrea-logo"></a>
         <nav>
+            <a href="/" class="logo"><img src="./public/images/andrea-logo-complete.svg" alt="andrea-logo"></a>
             <ul>
-                <li><a href="#">Docs</a></li>
-                <li><a href="./routes/html/about.html">Contact Me</a></li>
+                <li><a href="./public/pages/work.html">Impact</a></li>
+                <li><a href="./public/pages/about.html">About Me</a></li>
             </ul>
             <div class="social-icon">
-                <a href="/"><img src="https://img.icons8.com/bubbles/50/000000/linkedin.png" /></a>
-                <a href="https://icons8.com/icon/108812/linkedin" class="icon-credit">LinkedIn icon by Icons8</a>
+                <a href="/" class="linkedin-icon"><img src="./public/images/linkedin-icon.svg" /></a>
             </div>
         </nav>
     </header>
@@ -30,16 +29,56 @@
             <h4>legal attorney's assistant</h4>
         </div>
     </section>
-    <section class="highlights">
-        <h2>highlights</h2>
+    <section class="skills-list">
+        <div class="skill skills-one">
+            <h3>Legal Assistant Experience</h3>
+        </div>
+        <div class="skill skills-two">
+            <h3>Panetta Washington D.C. Intern Program</h3>
+            <img src="./public/images/capitol.svg" alt="capitol">
+        </div>
+        <div class="skill skills-three">
+            <h3>B.A. Women & Gender Studies</h3>
+        </div>
         <ul>
-            <li>Legal Assistant - Central American Resource Center</li>
-            <li>Refugee Representation Non-Legal Intern - Human Rights First</li>
-            <li>LOPC Intern - Esperanza Immigrant Rights Project</li>
-            <li>Legislative / Congressional Intern</li>
+            <li><a href="https://www.carecen-la.org/legal_services">Legal Assistant - Central American Resource Center</a></li>
+            <li><a href="https://www.humanrightsfirst.org/">Refugee Representation Non-Legal Intern - Human Rights First</a>
+            </li>
+            <li><a href="https://www.esperanza-la.org/">LOPC Intern - Esperanza Immigrant Rights Project</a></li>
+            <li><a href="https://www.csulb.edu/student-affairs/panetta">Legislative / Congressional Intern</a></li>
         </ul>
     </section>
+    <section class="highlights">
+        <h2>Work</h2>
+        <div class="work-gallery">
+            <figure class="gallery__item gal-1">
+                <img src="./public/images/scales-of-justice-glass-effect.svg" alt="img 1">
+            </figure>
+            <figure class="gallery__item gal-2">
+                <img src="./public/images/scales-of-justice-glass-effect.svg" alt="img 2">
+            </figure>
+            <figure class="gallery__item gal-3">
+                <img src="./public/images/scales-of-justice-glass-effect.svg" alt="img 3">
+            </figure>
+            <figure class="gallery__item gal-4">
+                <img src="./public/images/scales-of-justice-glass-effect.svg" alt="img 4">
+            </figure>
+        </div>
+    </section>
     <footer>
+        <a href="/" class="footer-logo"><img src="./public/images/andrea-logo.svg" alt="small-logo"></a>
+        <div class="lower-footer-sect">
+            <ul>
+                <li><a href="./public/pages/work.html">Impact</a></li>
+                <li><a href="./public/pages/about.html">About</a></li>
+            </ul>
+            <form action="email-form">
+                <input type="text">
+                <input type="email">
+                <textarea name="comments" id="footer-comments" cols="30" rows="10"></textarea>
+                <input type="submit">
+            </form>
+        </div>
 
     </footer>
 </body>
