Update homescreen layout

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <section class="skills-list">
         <div class="skill skills-one">
             <h3>Legal Assistant Experience</h3>
+            <img src="./public/images/legal-paper.svg" alt="legal-doc">
         </div>
         <div class="skill skills-two">
             <h3>Panetta Washington D.C. Intern Program</h3>
@@ -39,14 +40,14 @@
         </div>
         <div class="skill skills-three">
             <h3>B.A. Women & Gender Studies</h3>
+            <img src="./public/images/certificate.svg" alt="degree">
         </div>
-        <ul>
+        <!-- <ul>
             <li><a href="https://www.carecen-la.org/legal_services">Legal Assistant - Central American Resource Center</a></li>
-            <li><a href="https://www.humanrightsfirst.org/">Refugee Representation Non-Legal Intern - Human Rights First</a>
-            </li>
+            <li><a href="https://www.humanrightsfirst.org/">Refugee Representation Non-Legal Intern - Human Rights First</a></li>
             <li><a href="https://www.esperanza-la.org/">LOPC Intern - Esperanza Immigrant Rights Project</a></li>
             <li><a href="https://www.csulb.edu/student-affairs/panetta">Legislative / Congressional Intern</a></li>
-        </ul>
+        </ul> -->
     </section>
     <section class="highlights">
         <h2>Work</h2>
@@ -81,5 +82,7 @@
         </div>
 
     </footer>
+    <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
+            href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 </body>
 </html>
