Adjust mobile view

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     </header>
     <section class="intro">
         <img src="./public/images/intro-illustration.svg" alt="andrea-profile" class="intro-image">
+        <div class="pattern-test">
+            
+        </div>
         <div class="intro-text">
             <h1>andrea garcia</h1>
             <h4>legal attorney's assistant</h4>
@@ -35,7 +38,7 @@
             <img src="./public/images/legal-paper.svg" alt="legal-doc">
         </div>
         <div class="skill skills-two">
-            <h3>Panetta Washington D.C. Intern Program</h3>
+            <h3>Congressional Intern Experience</h3>
             <img src="./public/images/capitol.svg" alt="capitol">
         </div>
         <div class="skill skills-three">
