Update grid image format

--- a/index.html
+++ b/index.html
@@ -56,10 +56,14 @@
         <h2>Work</h2>
         <div class="work-gallery">
             <figure class="gallery__item gal-1">
-                <img src="./public/images/scales-of-justice-glass-effect.svg" alt="img 1">
+                <a href="https://www.carecen-la.org/legal_services">
+                <img src="./public/images/carecen-logo.svg" alt="img 1">
+                </a>
             </figure>
             <figure class="gallery__item gal-2">
-                <img src="./public/images/scales-of-justice-glass-effect.svg" alt="img 2">
+                <a href="https://www.humanrightsfirst.org/">
+                <img src="./public/images/hrf-org-logo.svg" alt="img 2">
+                </a>
             </figure>
             <figure class="gallery__item gal-3">
                 <img src="./public/images/scales-of-justice-glass-effect.svg" alt="img 3">
