Update grid and intro imgs

--- a/public/pages/work.html
+++ b/public/pages/work.html
@@ -23,5 +23,8 @@
     <section>
 
     </section>
+    <div>Photo by <a href="https://unsplash.com/@macu_ic?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Macu
+        ic</a> on <a
+        href="https://unsplash.com/s/photos/justice?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></div>
 </body>
 </html>
