--- a/index.html
+++ b/index.html
@@ -23,10 +23,15 @@
         </nav>
     </header>
     <section class="intro">
-        <img src="./public/images/intro-illustration.svg" alt="andrea-profile" class="intro-image">
-        <div class="pattern-test">
-            
-        </div>
+        <svg class="-intro-arch" >
+            <defs>
+                <clipPath clipPathUnits="objectBoundingBox" id="mask">
+                    <path d="M317,325.55h-.75a4.82,4.82,0,0,1,0-.77.38.38,0,0,1,.7,0A6.26,6.26,0,0,1,317,325.55Z"
+                        transform="translate(-316.26 -324.55)" fill="none" />
+                </clipPath>
+            </defs>
+            <img src="./public/images/congress.jpg" alt="andrea-profile" class="intro-image" clip-path="url(#mask)">
+        </svg>
         <div class="intro-text">
             <h1>andrea garcia</h1>
             <h4>legal attorney's assistant</h4>
@@ -55,22 +60,18 @@
     <section class="highlights">
         <h2>Work</h2>
         <div class="work-gallery">
-            <figure class="gallery__item gal-1">
-                <a href="https://www.carecen-la.org/legal_services">
+            <a href="https://www.carecen-la.org/legal_services" class="gallery__item gal-1">
                 <img src="./public/images/carecen-logo.svg" alt="img 1">
-                </a>
-            </figure>
-            <figure class="gallery__item gal-2">
-                <a href="https://www.humanrightsfirst.org/">
+            </a>
+            <a href="https://www.humanrightsfirst.org/" class="gallery__item gal-2">
                 <img src="./public/images/hrf-org-logo.svg" alt="img 2">
-                </a>
-            </figure>
-            <figure class="gallery__item gal-3">
-                <img src="./public/images/scales-of-justice-glass-effect.svg" alt="img 3">
-            </figure>
-            <figure class="gallery__item gal-4">
-                <img src="./public/images/scales-of-justice-glass-effect.svg" alt="img 4">
-            </figure>
+            </a>
+            <a href="https://www.esperanza-la.org/" class="gallery__item gal-3">
+                <img src="./public/images/carecen-logo.svg" alt="img 1">
+            </a>
+            <a href="https://www.csulb.edu/student-affairs/panetta" class="gallery__item gal-4">
+                <img src="./public/images/hrf-org-logo.svg" alt="img 2">
+            </a>
         </div>
     </section>
     <footer>
@@ -90,6 +91,10 @@
 
     </footer>
     <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
-            href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+            href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+            Photo by <a
+                href="https://unsplash.com/@solenfeyissa?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Solen
+                Feyissa</a> on <a
+                href="https://unsplash.com/s/photos/congress?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></div>
 </body>
 </html>
